--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -1,9 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;700&display=swap');
+
 :root {
   --backgound: #DBE0E7;
   --post-title: #222222;
   --post-background: #ffffff;
   --post-text: #878a8c ;
+  --nav-background: #ffffff;
   --nav-title: #1c1c1c;
+  --secundary-color: #0079d3;
+  --btn-primary-hover: #EAF5F6;
+  --orange-reddit: #FF4500;
+  --gray-light: #eee;
+  --gray-light-medium: #d7dadc;
 }
 
 html {
